--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets\icons\Arrow - Left 2.svg
+      - assets\icons\pancakes.svg
+      - assets\icons\pie.svg
+      - assets\icons\blueberry-pancake.svg
+      - assets\icons\salmon-nigiri.svg
+      - assets\icons\orange-snacks.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
